CMAKE_MINIMUM_REQUIRED(VERSION 3.9 FATAL_ERROR)

SET(CMAKE_DEBUG_POSTFIX "_d" CACHE STRING "")
SET(CMAKE_RELEASE_POSTFIX "" CACHE STRING "")
SET(CMAKE_RELWITHDEBINFO_POSTFIX "" CACHE STRING "")
SET(CMAKE_MINSIZEREL_POSTFIX "" CACHE STRING "")

if(ANDROID)
add_subdirectory(android_native_app_glue)
endif()

set(EXE_NAME ndksample)

set(SOURCE_PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
)

if(ANDROID)
    add_library(${EXE_NAME} SHARED  ${SOURCE_PRIVATE})
else()
    add_executable(${EXE_NAME} ${SOURCE_PUBLIC} ${SOURCE_PRIVATE})
endif()


#SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES  DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})

#SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES OUTPUT_NAME ${EXE_NAME})


IF(ANDROID)
    set(EXTRA_LINKED_LIBRARIES ${EXTRA_LINKED_LIBRARIES} 
    native_app_glue
    android
    log
    z
    )
ENDIF()
target_link_libraries(${EXE_NAME} ${EXTRA_LINKED_LIBRARIES})

SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES FOLDER "${FOLDER_PATH}")
